<resources>
    <string name="app_name">Resouce Manager</string>
    <string name="version_application">%1$s - %2$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_print">In QRCode</string>
    <string name="action_reload">Reload Info</string>
    <string name="zxing_msg_custom_status">Đưa nội dung quét QRCode vào khung hình</string>
    <string name="title_scan_qrcode">Vietnamnet ICom</string>
    <string name="hint_purchase_date">Ngày mua (dd/MM/yyyy)</string>
    <string name="hint_delivery_date">Ngày bàn giao(dd/MM/yyyy)</string>
    <string name="hint_madein">Xuất xứ</string>
    <string name="hint_price">Giá trị tài sản (VNĐ)</string>
    <string name="hint_serie">Serial tài sản</string>
    <string name="code_member"><![CDATA[<b>Mã NV: <b/>%1$s]]></string>
    <string name="title_button_profile_info">Thông tin NV</string>
    <string name="title_button_edit">Chỉnh sửa</string>
    <string name="hint_tech_value">Thông số kỹ thuật</string>
    <string name="hint_print_identification">Mã định danh tài sản</string>
    <string name="hint_print_start">Mã bắt đầu in</string>
    <string name="hint_print_total">Tổng số lượng mã</string>
    <string name="hint_print_columns">Số cột</string>
    <string name="title_button_print">In QRCode</string>
    <string name="message_question_qrcode">Bạn muốn thực hiện?</string>
    <string name="title_button_create">Tạo mới</string>
    <string name="title_button_mapping">Kết nối TS</string>
    <string name="hint_detail_resouce">Chi tiết thông tin TS</string>
    <string name="title_button_save">Lưu</string>
    <string name="title_button_cancel">Hủy</string>
    <string name="hint_resouce_name">Định danh tên tài sản</string>
    <string name="hint_resouce_code">Mã định danh tài sản</string>
    <string name="title_activity_print">In QRCode</string>
    <string name="title_activity_info">Thông tin</string>
    <string name="title_activity_create_info">Tài sản mới</string>
    <string name="title_activity_edit">Chỉnh sửa thông tin</string>
    <string name="message_error_input_code">Chưa nhập mã code</string>
    <string name="message_error_input_name">Chưa nhập tên tài sản</string>
    <string name="message_error_input_detail">Chưa nhập thông tin tài sản</string>
    <string name="message_error_input_serial">Chưa nhập mã tài sản</string>
    <string name="message_error_input_tech">Chưa nhập thông tin kỹ thuật</string>
    <string name="message_error_input_price">Chưa nhập giá trị tài sản</string>
    <string name="message_error_input_madein">Chưa nhập xuât xứ tài sản</string>
    <string name="message_error_input_buy_date">Chưa có ngày mua</string>
    <string name="message_error_input_delivery_date">Chưa có ngày bàn giao</string>
    <string name="message_error_input_validate_date">Vui lòng nhập đúng định dạng</string>
    <string name="hint_keyword_search">Từ khóa tìm kiếm</string>
    <string name="title_button_filter">Lọc tìm</string>
    <string name="title_activity_mapping_resource">Kết nối tài sản</string>
    <string name="title_message_not_scanner_qrcode"><![CDATA[Bạn không thể nhận diện mã QRCode <b>Click here</b>]]></string>
</resources>
